@@ -1,4 +1,4 @@
-# Copyright 1997, 1998, 1999, 2000, 2001 Free Software Foundation, Inc.
+# Copyright 1997, 1998, 1999, 2000, 2001, 2003 Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -55,15 +55,15 @@ if [get_compiler_info ${binfile}] {
 #remote_exec build "$CC -g +z -c ${libfile}1.c -o ${libfile}1.o"
 
 
-if {$gcc_compiled == 0} {
+if { [test_compiler_info gcc-*-*] } then {
+    set additional_flags "additional_flags=-fpic"
+} else {
     if [istarget "hppa*-hp-hpux*"] then {
 	set additional_flags "additional_flags=+z"
     } else {
 	# don't know that the compiler is, hope for the best...
 	set additional_flags ""
     }
-} else {
-    set additional_flags "additional_flags=-fpic"
 }
 
 if {[gdb_compile "${srcdir}/${subdir}/${libfile}1.c" "${libfile}1.o" object [list debug $additional_flags]] != ""} {
