@@ -1,3 +1,9 @@
+2003-12-04  Michael Chastain  <mec.gnu@mindspring.com>
+
+	Partial fix for PR testsuite/1456.
+	* gdb.base/so-impl-ld.exp: Replace reference to gcc_compiled with call
+	to test_compiler_info.
+
 2003-12-03  Michael Chastain  <mec.gnu@mindspring.com>
 
 	* gdb.base/so-impl-ld.exp: Update copyright notice.
